# FRGDFT_3DHEG

./: .gitignore  CMakeLists.txt  README.md
include/: calc_c.h  calc_energy.h  common_var.h  integ_prep.h
run/: input.txt  run.sh
src/: calc_c.cpp  calc_energy.cpp  main.cpp
