CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
project(FRGDFT_3DHEG CXX)
message("project name is automaically set as: ${PROJECT_NAME}")

set(PROJECT_VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-O3 -Wall")

find_package(GSL REQUIRED)
find_package(MPI REQUIRED)

file(GLOB SRC src/*.cpp)

add_executable(prog ${SRC})
add_compile_options(${CMAKE_CXX_FLAGS})
target_include_directories(prog PUBLIC include/ ${GSL_INCLUDE_DIRS} ${MPI_INCLUDE_PATH})
target_link_libraries(prog PUBLIC ${GSL_LIBRARIES} ${MPI_LIBRARIES})

MESSAGE(STATUS "--------------------------------------------")
MESSAGE(STATUS "Info :")
MESSAGE(STATUS "  Project Name         = ${PROJECT_NAME}")
MESSAGE(STATUS "  Version              = ${PROJECT_VERSION}")
MESSAGE(STATUS "  CMAKE_VERSION        = ${CMAKE_VERSION}")
MESSAGE(STATUS "  CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
MESSAGE(STATUS "  CMAKE_BUILD_TYPE     = ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "  CMAKE_INSTALL_LIBDIR = ${CMAKE_INSTALL_LIBDIR}")
MESSAGE(STATUS "  CMAKE_CXX_FLAGS      = ${CMAKE_CXX_FLAGS}")
MESSAGE(STATUS "  GSL_LIBRARIES        = ${GSL_LIBRARIES}")
MESSAGE(STATUS "  GSL_INCLUDE_DIRS     = ${GSL_INCLUDE_DIRS}")
MESSAGE(STATUS "  MPI_LIBRARIES        = ${MPI_LIBRARIES}")
MESSAGE(STATUS "  MPI_INCLUDE_PATH     = ${MPI_INCLUDE_PATH}")
